# BitDelay

./: .gitignore  CMakeLists.txt  README.md
Buffering/: Buffering.cpp  Buffering.h  CircularBuffer.cpp  CircularBuffer.h  CircularPlayhead.cpp  CircularPlayhead.h  LockFreeFifo.cpp  LockFreeFifo.h
PluginFundamentals/: BasicStateLoading.cpp  BasicStateLoading.h  PluginFundamentals.cpp  PluginFundamentals.h
source/: BitDelaySliderGroup.cpp  BitDelaySliderGroup.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
